<resources>
    <string name="app_name">ProjectA</string>
    <string name="home_page_name">首页</string>
    <string name="gift_page_name">榜单</string>
    <string name="mall_page_name">商店</string>
    <string name="category_page_name">分类</string>
    <string name="profile_page_name">我的</string>
    <string name="gift_page_title">礼物榜</string>
    <string name="item_strategy_up_tv">栏目</string>
    <string name="item_strategy_up_show_all">查看全部</string>
    <string name="activity_gift_details_like">喜欢</string>
    <string name="activity_gift_details_share">分享</string>
    <string name="activity_gift_details_add_to_shop">加入购物车</string>
    <string name="activity_gift_details_buy_now">立即购买</string>
    <string name="activity_log_in_input_number">请输入电话号码</string>
    <string name="activity_log_in_input_password">请输入密码</string>
    <string name="activity_log_in_login">登录</string>
    <string name="activity_popup_window_kind">款式</string>
    <string name="activity_search_title">选份走心得好礼送给Ta</string>
    <string name="activity_cancel">取消</string>
    <string name="activity_strategy_title">攻略详情</string>
    <string name="activity_strategy_look_all">查看全集</string>
    <string name="shop_cart">购物车</string>
    <string name="list">订单</string>
    <string name="gift_certificate">礼券</string>
    <string name="customer_service">客服</string>
    <string name="logout">退出登录</string>
    <string name="recommend_gift">推荐礼物</string>
    <string name="head_search">大家都在搜</string>
    <string name="chennels">频道列表</string>
    <string name="unattention">未关注</string>
    <string name="move_more_to">继续滑动查看图文详情</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
