<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_strategy_sdetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.jieleo.projecta.activity.StrategyDetailsActivity">

    <RelativeLayout
        android:id="@+id/relate_layout_strategy_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin_50"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iv_back_strategy_details"
            android:layout_width="@dimen/activity_horizontal_margin_50"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/btn_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/activity_strategy_title"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/tv_look_all_strategy_details"
            android:layout_width="@dimen/activity_horizontal_margin_70"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/activity_strategy_look_all"
            android:textSize="@dimen/activity_horizontal_margin_15" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linerlayout_bottom_strategy_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin_50"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_heart_strategy_details"
            android:layout_width="@dimen/activity_horizontal_margin_50"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:button="@null"
            android:drawableLeft="@drawable/likes_checkbox_selector"
            android:gravity="left|center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_20"
            android:text="@string/activity_gift_details_like"
            android:textSize="@dimen/text_size_10" />
        <TextView
            android:layout_width="@dimen/activity_horizontal_margin_50"
            android:text="1127"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_165"
            android:textSize="10sp"
            android:gravity="center_vertical|left"
            android:drawableLeft="@mipmap/icon_share_black"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="@dimen/activity_horizontal_margin_50"
            android:text="7"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|left"
            android:layout_marginRight="@dimen/activity_horizontal_margin_5"
            android:drawableLeft="@mipmap/ic_action_item_comment"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linerlayout_bottom_strategy_details"
        android:layout_below="@id/relate_layout_strategy_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cover_image_strategy_details"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_horizontal_margin_200" />

            <TextView
                android:id="@+id/tv_share_msg_strategy_details"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_horizontal_margin_100"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="@dimen/activity_horizontal_margin_50"
                android:layout_height="1dp" />

            <WebView
                android:id="@+id/web_view_strategy_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </WebView>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
